# matching

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: packaging.yml
notebooks/: ann.bib  ann_basic.ipynb  artificial_neural_networks.ipynb  ditto.ipynb  learning_distances.ipynb  logistic_regression.bib  logistic_regression_patterns.ipynb  naive_bayes.ipynb  svm.bib  svm.ipynb  use_distance_features.bib  use_distance_features.ipynb
src/matchescu/matching/: __init__.py  _matcher.py  _sim_graph.py
src/matchescu/matching/attribute/: _typing.py
src/matchescu/matching/blocking/: __init__.py  _block.py  _block_engine.py  _blocker.py  _blocking_metrics.py  _filter.py  _tokenization.py
src/matchescu/matching/config/: __init__.py  _config_model.py  _dataset_config.py  _record_linkage.py
src/matchescu/matching/entity_reference/: _comparison.py
src/matchescu/matching/extraction/: __init__.py
src/matchescu/matching/ml/: __init__.py  (+1 more)
tests/: conftest.py
tests/data/: config.json  cora_duplicates.csv  sample.csv  subsample_a.csv  subsample_b.csv  subtable_a.csv  subtable_b.csv  table.csv
tests/data/abt-buy/: Abt.csv  Buy.csv  abt_buy_perfectMapping.csv
tests/data/affiliationstrings/: affiliationstrings_clusters.csv  affiliationstrings_ids_with_source.csv  directed_with_label.csv  undirected_with_label.csv
tests/data/amazon_google_exp_data/: test.csv
tests/data/cora/: cora.csv
tests/matching/: conftest.py  test_sim_graph.py
tests/matching/blocking/: conftest.py  test_basic_token_blocking.py  test_block.py  test_blocking_engine_comparison_generation.py  test_data_source_composition.py  test_jaccard_blocking.py  test_jaccard_candidate_filter.py  test_jaccard_filter.py  test_tf_idf_blocker.py  test_tf_idf_token_blocking.py
tests/matching/distance/: test_ristad_yianilos.py
tests/matching/matchers/: conftest.py
tests/matching/similarity/: conftest.py  test_bucketed.py  test_numeric.py  test_raw_match.py  test_string.py  test_value_similarity_match.py
(+149 files in other folders)
