[tool.poetry]
name = "matchescu-matching"
version = "0.1.3"
description = "Common types and algorithms used for matching two information"
authors = ["Andrei Olar <andrei.olar@ubbcluj.ro>"]
license = "MIT"
readme = "README.md"
packages = [{include = "matchescu", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
polars = "^1.15.0"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
matchescu-base = "^0.7.0"
jellyfish = "^1.1.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
pytest = "^8.3.3"
plotly = "^5.24.1"
black = "^24.10.0"
nltk = "^3.9.1"
torch = "^2.5.1"
fasttext = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
