[tool.poetry]
name = "matchescu-matching"
version = "0.15.8"
description = "Common types and algorithms used for matching two information"
authors = ["Andrei Olar <andrei.olar@ubbcluj.ro>"]
license = "MIT"
readme = "README.md"
packages = [{include = "matchescu", from="src"}]

[tool.poetry.scripts]
train-ditto = "matchescu.matching.matchers.ml.ditto.training.__main__:run_training"

[tool.poetry.dependencies]
python = "!=3.14.1,>=3.13,<3.15"
polars = "^1.38.1"
scikit-learn = "^1.8.0"
numpy = "^2.4.2"
matchescu-base = "^0.24.0"
jellyfish = "^1.2.1"
stopwords = "^1.0.2"
transformers = "^5.1.0"
datasketch = "^1.9.0"
matchescu-reference-extraction = "^0.8.0"
torch = "^2.10.0"
matchescu-reference-store = "^0.8.5"
matchescu-comparison-space-generation = "^0.7.4"
pyarrow = "^23.0.0"
tiktoken = "^0.12.0"
sentencepiece = "^0.2.1"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
pytest = "^8.3.5"
plotly = "^5.24.1"
black = {version = "^25.1.0", extras = ["jupyter"]}
tensorboard = "^2.19.0"
ruff = "^0.11.2"
mypy = "^1.15.0"
pyresolvemetrics = "^0.3.2"
humanize = "^4.12.2"
click = "^8.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
